--- a/back/yourcar/src/main/resources/application.properties
+++ b/back/yourcar/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=yourcar
+
+# Database configuration
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# Automatic table creation on startup 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true 
+
+spring.jpa.defer-datasource-initialization=true
+
+server.port=8080
+
+#Execute SQL Script for inserting data 
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:scripts/database/data.sql
+
+#jwt token config
+security.app.jwtSecret=${JWT_SECRET}
+security.app.jwtExpirationMs=${JWT_EXPIRATION_MS}
